corpus/chords.txt
=================
simple chord
=================
{ <c e g> }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name))))))

=================
chord with duration
=================
{ <c e g>4 }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (duration (duration_value)))))

=================
chord with accidentals
=================
{ <cis ees gis> }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name) (accidental)))
      (chord_element (pitch (pitch_name) (accidental)))
      (chord_element (pitch (pitch_name) (accidental))))))

=================
chord with octaves
=================
{ <c' e' g'> }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name) (octave (octave_up))))
      (chord_element (pitch (pitch_name) (octave (octave_up))))
      (chord_element (pitch (pitch_name) (octave (octave_up)))))))

=================
chord with tie
=================
{ <c e>~ <c e> }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (tie))
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name))))))

=================
chord with slur
=================
{ <c e>( <d f>) }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (slur_open))
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (slur_close))))

=================
chord sequence
=================
{ <c e g>4 <d f a> <e g b>2 }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (duration (duration_value)))
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name))))
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (duration (duration_value)))))

=================
two note chord
=================
{ <c g> }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name))))))

=================
dotted chord
=================
{ <c e g>4. }

---
(lilypond
  (music
    (chord
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (chord_element (pitch (pitch_name)))
      (duration (duration_value) (dots)))))
